--- a/assessment.html
+++ b/assessment.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ヨルシカの曲のフレーズをあなたに届けます</title>
+  <meta name="twitter:card" content="summary" />
+  <meta property="og:url" content="https://nhighprgrmmr.github.io/assessment/assessment.html" />
+  <meta property="og:title" content="あなたにピッタリなフレーズは？" />
+  <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたにピッタリなフレーズは？」サイトです。" />
   <link rel="stylesheet" href="assessment.css">
 </head>
 
