--- a/assessment.html
+++ b/assessment.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h1>あなたにピッタリなフレーズは？</h1>
+  <h1>あなたにピッタリなフレーズを届けます。</h1>
   <p>届けて欲しいお名前を入力してください🍋</p>
   <input type="text" id="user-name" size="40" maxlength="20">
   <button id="assessment">届ける</button>
